[package]
name = "p2p-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread", "macros"] }
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
libp2p = { version = "0.55.0", features = ["full"] }
libp2p-episub = "0.1.13"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
uuid = "1.12.1"
rand = "0.8.5"
socket2 = "0.5.8"
log4rs = "1.3.0"
log = "0.4.25"
arrow = "54.0.0"

[[bin]]
name = "client"
path = "src/client/client.rs"